--- a/agenda.html
+++ b/agenda.html
@@ -64,7 +64,7 @@
         async function onIceCandidate(event) {
             try {
                 console.log('ice candidate', event)
-                if(event.candidate){candidates.push(event.candidate)};
+                if(event.candidate && event.candidate.type === "srflx"){candidates.push(event.candidate)};
                 onAddIceCandidateSuccess();
             } catch (e) {
                 onAddIceCandidateError(e);
